--- a/lpfw-pygui/Makefile
+++ b/lpfw-pygui/Makefile
@@ -13,15 +13,18 @@ SOURCES 	=	lpfw-pygui.c \
 
 all: ipc_wrapper2 lpfwpygui
 
-ipc_wrapper.so: ipc_wrapper.c
-	gcc ../common/includes.h ipc_wrapper.c $(GCCFLAGS) -shared -lpython2.6 -o ipc_wrapper.so
-
 ipc_wrapper2: ipc_wrapper2.c
 	gcc ../common/includes.h ipc_wrapper2.c $(GCCFLAGS) -lpthread -o ipc_wrapper2
 
 lpfwpygui:  $(SOURCES)
 	gcc $(SOURCES) -o lpfwpygui
 
+install:
+	mv lpfwpygui $(DESTDIR)
 
 debug: GCCFLAGS += -g -DDEBUG2 -DDEBUG -DDEBUG3
 debug: ipc_wrapper2 lpfwpygui
+
+#Obsolete, keep here just in case
+#ipc_wrapper.so: ipc_wrapper.c
+#	gcc ../common/includes.h ipc_wrapper.c $(GCCFLAGS) -shared -lpython2.6 -o ipc_wrapper.so
