--- a/lpfw-cli/Makefile
+++ b/lpfw-cli/Makefile
@@ -1,5 +1,5 @@
 DESTDIR = ./
-GCCFLAGS =
+GCCFLAGS = -g
 SOURCES 	=	ipc.c \
 			lpfwcli.c \
 			../common/includes.h \
@@ -15,7 +15,7 @@ SOURCES 	=	ipc.c \
 all: lpfwcli
 
 lpfwcli: $(SOURCES)
-	gcc -g $(GCCFLAGS) $(SOURCES) -lncurses -lpthread -o lpfwcli
+	gcc $(GCCFLAGS) $(SOURCES) -lncurses -lpthread -o lpfwcli
 
 debug: GCCFLAGS += -g -DDEBUG2 -DDEBUG -DDEBUG3
 debug: lpfwcli
