cli frontend now starts independently

--- a/lpfw-cli/Makefile
+++ b/lpfw-cli/Makefile
@@ -4,6 +4,13 @@ SOURCES 	=	ipc.c \
 			lpfwcli.c \
 			common/includes.h \
 			common/defines.h \
+			../argtable/arg_end.c \
+			../argtable/arg_file.c \
+			../argtable/arg_int.c \
+			../argtable/arg_lit.c \
+			../argtable/arg_rem.c \
+			../argtable/arg_str.c \
+			../argtable/argtable2.c \
 
 all: lpfwcli
 
