copy only files that have changed

--- a/lpfw-pygui/Makefile
+++ b/lpfw-pygui/Makefile
@@ -19,19 +19,17 @@ ipc_wrapper2: ipc_wrapper2.c
 lpfwpygui:  $(SOURCES)
 	gcc $(SOURCES) $(GCCFLAGS) -o lpfwpygui
 
-dummy: lpfwpygui ipc_wrapper2 resource.py prefs.py popup_out.py popup_in.py lpfwgui.py frontend.py
+dummy2: lpfwpygui
 	cp lpfwpygui $(DESTDIR)
+	touch dummy2
+
+dummy:  ipc_wrapper2 resource.py prefs.py popup_out.py popup_in.py lpfwgui.py frontend.py
 	mkdir -p $(DESTDIR)/lpfw-pygui
-	cp ipc_wrapper2 $(DESTDIR)/lpfw-pygui
-	cp resource.py $(DESTDIR)/lpfw-pygui
-	cp prefs.py $(DESTDIR)/lpfw-pygui
-	cp popup_out.py $(DESTDIR)/lpfw-pygui
-	cp popup_in.py $(DESTDIR)/lpfw-pygui
-	cp lpfwgui.py $(DESTDIR)/lpfw-pygui
-	cp frontend.py $(DESTDIR)/lpfw-pygui
+# $?  - prerequisites that have changed
+	cp $? $(DESTDIR)/lpfw-pygui
 	touch dummy
 
-install: dummy
+install: dummy dummy2
 
 debug: GCCFLAGS += -g -DDEBUG2 -DDEBUG -DDEBUG3
 debug: ipc_wrapper2 lpfwpygui
