--- a/lpfw-cli/Makefile
+++ b/lpfw-cli/Makefile
@@ -15,7 +15,7 @@ SOURCES 	=	ipc.c \
 all: lpfwcli
 
 lpfwcli: $(SOURCES)
-	gcc $(GCCFLAGS) $(SOURCES) -lncurses -lpthread -o lpfwcli
+	gcc $(GCCFLAGS) $(SOURCES) -lncursesw -lpthread -o lpfwcli
 
 debug: GCCFLAGS += -g -DDEBUG2 -DDEBUG -DDEBUG3
 debug: lpfwcli
