added iptables (basic) rules script
added notes in Ubuntu upstart script

--- a/ubuntu/lpfw.conf
+++ b/ubuntu/lpfw.conf
@@ -1,3 +1,25 @@
+# This file should go into /etc/init/ on Ubuntu
+# Then start the firewall with command `service lpfw start`
+# If you put the 30-lpfw.conf file in this folder into /etc/rsyslog.d/
+# the you can see the log by doing: tail -f /var/log/lpfw.log
+
 start on (starting networking and started rsyslog)
 
-exec /usr/sbin/lpfw
+pre-start script
+	# Flish firewall rules and start with a clean slate for LPFW
+	/path_to_leapord_flower_firewall/iptables_script
+end script
+
+post-stop script
+	# Flush firewall with the default DROP rules so that the iptables will be locked down if LPFW is not running
+	/path_to_leapord_flower_firewall/iptables_script
+end script
+
+exec /path_to_leapord_flower_firewall/lpfw --logging-facility=syslog --log-info=1 --log-traffic=1 --log-debug=1
+
+respawn
+
+respawn limit 10 60
+
+# NOTE: Please run ./lpfw as user root to create this group (it will auto-create the group)
+setgid lpfwuser
