adding better logging config file

--- a/ubuntu/30-lpfw.conf
+++ b/ubuntu/30-lpfw.conf
@@ -1,8 +1,26 @@
 #file goes to /etc/rsyslog.d/ on Ubuntu
 #provided that rsyslog.conf contains something like $IncludeConfig /etc/rsyslog.d/*
 # Log generated LPFW log messages to file
-:programname,isequal,"lpfw" /var/log/lpfw.log
+#:programname,isequal,"lpfw",msg,contains,"drop",msg,!contains,"ass" /var/log/lpfw.log
 
 # Uncomment the following to stop logging the above rule to anywhere else, otherwise
 # the rule gets duplicated in syslog
-& ~
+#& ~
+
+
+# New logging rules:
+
+if $programname == "lpfw" then {
+	# Coment out the bellow line if you dont want to log all activity
+	#action(type="omfile" file="/var/log/lpfw.log")
+
+	# The bellow 3 lines are to log all processes that are trying to initiate a connection which are
+	# not configured a allow/deny rule. This is the more interesting log
+	# (what processes are trying to connect to the internet that you did`t already know about?)
+	if(($msg contains "drop") and not ($msg contains "no process associated")) then {
+		action(type="omfile" file="/var/log/lpfw-drop.log")
+	}
+
+	# Comment out the following to keep logging to the syslog (duplicate)
+	~
+}
